# spacehaven-cheat-engine

./: .ghtraf.json  .gitignore  .repokit.json  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/: FUNDING.yml  release-template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  setup-from-template.yml  traffic-badges.yml
docs/: platform-support.md
docs/stats/: README.md  index.html
private/claude/commits/: commit_v0.1.0_initial-template.txt
scripts/: README.md  update-common.sh
spacehaven_cheat_engine/: __init__.py  __main__.py  _version.py  patcher.py
tests/: conftest.py  test_version.py
