[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacehaven-cheat-engine"
dynamic = ["version"]
description = "Pattern-based bytecode patcher that removes skill/attribute point caps from Space Haven character creation"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Dustin Darcy", email = "djdarcy@users.noreply.github.com"},
]
keywords = ["space-haven", "game-mod", "bytecode-patch", "cheat-engine", "character-editor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/djdarcy/spacehaven-cheat-engine"
Repository = "https://github.com/djdarcy/spacehaven-cheat-engine"
Issues = "https://github.com/djdarcy/spacehaven-cheat-engine/issues"

[project.scripts]
spacehaven-cheat = "spacehaven_cheat_engine.patcher:main"

[tool.setuptools.dynamic]
version = {attr = "spacehaven_cheat_engine._version.PIP_VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["spacehaven_cheat_engine", "spacehaven_cheat_engine.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.repokit-common]
version-source = "spacehaven_cheat_engine/_version.py"
changelog = "CHANGELOG.md"
repo-url = "https://github.com/djdarcy/spacehaven-cheat-engine"
tag-prefix = "v"
private-patterns = ["private/", "local/", ".env"]
